# susc2nusc

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/nusc_converter/: __init__.py  converter.py  susc_datamodels.py  utils.py  vis.py
